package com.sidgowda.pawcalc.navigation

const val ONBOARDING_SCREEN_ROUTE = "onboarding_screen_route"

const val NEW_DOG_SCREEN_ROUTE = "new_dog_screen_route"

const val DOG_LIST_SCREEN_ROUTE = "dog_list_screen_route"

const val SETTINGS_SCREEN_ROUTE = "settings_screen_route"

const val EDIT_DOG_SCREEN_ROUTE = "edit_dog_screen_route"

const val DOG_DETAILS_SCREEN_ROUTE = "dog_details_screen_route"
