package com.sidgowda.pawcalc.onboarding

object TestTags {
    const val TAG_ADD_DOG_BUTTON = "add_dog_button"
}
